methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:20: error: not found: value prendbiscuit
prendbiscuit()
^